# Threax.Home

./: .gitignore  .gitmodules  Publish.bat  Publish.ps1  Push.ps1  Threax.Home.sln  Todo.md  Update.bat  docker-compose.yml
ColorTouchSharp/: ApiInfo.cs  ColorTouchClient.cs  ColorTouchClientManager.cs  ColorTouchSharp.csproj  Enums.cs  IColorTouchClient.cs  IColorTouchClientManager.cs  ThermostatSetting.cs  ThermostatStatus.cs
TestLibCec/: Program.cs  TestLibCec.csproj
Threax.Home.Client/: DiExtensions.cs  HomeClientOptions.cs  ServiceClient.cs  Threax.Home.Client.csproj
Threax.Home.Colortouch/: ColorTouchConfig.cs  DiExtensions.cs  Threax.Home.Colortouch.csproj
Threax.Home.Core/: DiExtensions.cs  ICoreSensor.cs  ICoreSwitch.cs  ICoreThermostat.cs  ISensorRepository.cs  ISwitchRepository.cs  ISwitchSubsystemManager.cs  IThermostatRepository.cs  SemaphoreSlimLock.cs  SensorSubsystemManager.cs  SwitchSubsystemManager.cs  ThermostatSubsystemManager.cs  Threax.Home.Core.csproj
Threax.Home.Hue/: DiExtensions.cs  HueConfig.cs  Threax.Home.Hue.csproj
Threax.Home.LibCec/: DiExtensions.cs  LibCecConfig.cs  Threax.Home.LibCec.csproj
Threax.Home.Mfi/: DiExtensions.cs  Threax.Home.Mfi.csproj
Threax.Home.WinLirc/: DiExtensions.cs  HGlobalHelper.cs  Threax.Home.WinLirc.csproj  WinLirc.cs  WinLircConfig.cs
Threax.Home.ZWave/: DiExtensions.cs  SensorMultiLevelReport2.cs  Threax.Home.ZWave.csproj  ZWaveConfig.cs
Threax.Home.ZWaveInspect/: Program.cs  (+1 more)
libCecCoreNative/: .gitignore  CMakeLists.txt  CecManager.h  libCecCoreNative.cpp  libCecCoreNative.vcxproj  stdafx.h
(+522 files in other folders)
